deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-plat-docs
  namespace: ai-plat
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  rules:
    - host: docs.ai-plat.intra
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-plat-docs
                port:
                  name: http
